# Rendezvous

./: CMakeLists.txt  LICENSE  README.md  package.xml  rendezvous.rviz
launch/: PX4Vision_UpCore.launch  Record_rendezvous.launch  Rendezvous.launch  Rendezvous_centralized.launch  bringup_nexus5.launch
msg/: Trajectory.msg
src/: Centralized_Rendezvous.cpp  MPC_UGV_generator.py  MPC_generator.py  UAVoffboard_node.cpp  UGVoffboard_node.cpp  distributed_UAVoffboard_node.cpp  distributed_UGVoffboard_node.cpp  mocap_odometry_to_fcu.cpp  simulator_node.cpp
src/SharedLibs/: MPC.c  MPC_UGV.c  rk4.c  rk4_UGV.c
