<?xml version="1.0"?>
<package format="2">
  <name>Rendezvous</name>
  <version>1.0.0</version>
  <description>PX4 Vision and Nexus robot rendezvous</description>

  <maintainer email="lucaga@kth.se">Luca Garegnani</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/LucaGare/Rendezvous</url>

  <author email="rbaran@kth.se">Robin Baran</author>
  <author email="lucaga@kth.se">Luca Garegnani</author>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>mocap_qualisys</depend>
  <depend>mavros</depend>


</package>
